shesmu-server/src/test/resources/bad/bad-action-param-type.shesmu
Input test;

Olive
  Group files = List path By accession
  Run fastqc With
    memory = "bad",
    input = files;
